--- a/projects/splunk/roles/cm/tasks/main.yml
+++ b/projects/splunk/roles/cm/tasks/main.yml
@@ -2,7 +2,7 @@
 # Install splunk 
 #
 #
-- name: Set server.conf configs (1)
+- name: Set server.conf configs (kvstore.disabled)
   ini_file:
     path: "{{ splunk_home }}/etc/system/local/server.conf" 
     mode: 0650
@@ -15,7 +15,7 @@
   notify:
     - Restart Splunk
 
-- name: Set server.conf configs (2)
+- name: Set server.conf configs (general.serverName)
   ini_file:
     path: "{{ splunk_home }}/etc/system/local/server.conf" 
     mode: 0650
@@ -28,20 +28,7 @@
   notify:
     - Restart Splunk
 
-- name: Set server.conf configs (3)
-  ini_file:
-    path: "{{ splunk_home }}/etc/system/local/server.conf" 
-    mode: 0650
-    section: clustering
-    option: master_uri
-    value: "{{ splunk_cm_uri }}"
-    backup: yes
-  become: yes
-  become_user: "{{ splunk_user }}"
-  notify:
-    - Restart Splunk
-
-- name: Set server.conf configs (4)
+- name: Set server.conf configs (clustering.mode)
   ini_file:
     path: "{{ splunk_home }}/etc/system/local/server.conf" 
     mode: 0650
@@ -54,7 +41,7 @@
   notify:
     - Restart Splunk
 
-- name: Set server.conf configs (5)
+- name: Set server.conf configs (clustering.pass4SymmKey)
   ini_file:
     path: "{{ splunk_home }}/etc/system/local/server.conf" 
     mode: 0650
@@ -67,7 +54,7 @@
   notify:
     - Restart Splunk
 
-- name: Set server.conf configs (6)
+- name: Set server.conf configs (clustering.cluster_label)
   ini_file:
     path: "{{ splunk_home }}/etc/system/local/server.conf" 
     mode: 0650
@@ -80,7 +67,7 @@
   notify:
     - Restart Splunk
 
-- name: Set web.conf configs (1)
+- name: Set web.conf configs (settings.mgmtHostPort))
   ini_file:
     path: "{{ splunk_home }}/etc/system/local/web.conf" 
     mode: 0650
@@ -93,7 +80,7 @@
   notify:
     - Restart Splunk
 
-- name: Set web.conf configs (2)
+- name: Set web.conf configs (settings.startwebserver)
   ini_file:
     path: "{{ splunk_home }}/etc/system/local/web.conf" 
     mode: 0650
