New laptop...hope things are copiste.......can't spell that word...

--- a/projects/splunk/roles/cm/tasks/main.yml
+++ b/projects/splunk/roles/cm/tasks/main.yml
@@ -94,7 +94,7 @@
     - Restart Splunk
 
 - name: Add master-apps
-  unarchive: src=master-apps.tgz dest="{{ splunk_home }}/etc/master-apps"
+  unarchive: src=master-apps.tgz dest="{{ splunk_home }}/etc"
   become: yes
   become_user: "{{ splunk_user }}"
   notify:
