--- a/projects/splunk/roles/dep/defaults/main.yml
+++ b/projects/splunk/roles/dep/defaults/main.yml
@@ -1,9 +1,9 @@
 ---
 # splunk default vars
-splunk_role: idx
+splunk_role: ds
 splunk_web_enabled: 0
 splunk_kvstore_disabled: 1
-splunk_home: /opt/splunk/idx
+splunk_home: /opt/splunk/ds
 splunk_root: /opt/splunk
 splunkd_mgmt_port: 8089
 splunk_git_repo: 'ssh://jslay@127.0.0.1:2222/Users/jslay/Projects/splunk/enterprise/linux/splunk'
