--- a/projects/splunk/roles/sh_cluster_member/tasks/main.yml
+++ b/projects/splunk/roles/sh_cluster_member/tasks/main.yml
@@ -51,6 +51,58 @@
   notify:
     - Restart Splunk
 
+- name: Set server.conf configs (clustering.pass4SymmKey)
+  ini_file:
+    path: "{{ splunk_home }}/etc/system/local/server.conf" 
+    mode: 0650
+    section: clustering
+    option: pass4SymmKey
+    value: "{{ splunk_cluster_key }}"
+    backup: yes
+  become: yes
+  become_user: "{{ splunk_user }}"
+  notify:
+    - Restart Splunk
+
+- name: Set server.conf configs (clustering.mode)
+  ini_file:
+    path: "{{ splunk_home }}/etc/system/local/server.conf" 
+    mode: 0650
+    section: clustering
+    option: mode
+    value: "{{ splunk_cluster_mode }}"
+    backup: yes
+  become: yes
+  become_user: "{{ splunk_user }}"
+  notify:
+    - Restart Splunk
+
+- name: Set server.conf configs (clustering.cluster_label)
+  ini_file:
+    path: "{{ splunk_home }}/etc/system/local/server.conf" 
+    mode: 0650
+    section: clustering
+    option: cluster_label
+    value: "{{ splunk_cluster_label }}"
+    backup: yes
+  become: yes
+  become_user: "{{ splunk_user }}"
+  notify:
+    - Restart Splunk
+
+- name: Set server.conf configs (clustering.master_uri)
+  ini_file:
+    path: "{{ splunk_home }}/etc/system/local/server.conf" 
+    mode: 0650
+    section: clustering
+    option: master_uri
+    value: "{{ splunk_cm_uri }}"
+    backup: yes
+  become: yes
+  become_user: "{{ splunk_user }}"
+  notify:
+    - Restart Splunk
+
 - name: Set server.conf configs (general.serverName)
   ini_file:
     path: "{{ splunk_home }}/etc/system/local/server.conf" 
@@ -64,12 +116,15 @@
   notify:
     - Restart Splunk
 
-- name: Set server.conf configs ([replication_port://9887])
-  ini_file:
-    path: "{{ splunk_home }}/etc/system/local/server.conf" 
-    mode: 0650
-    section: replication_port://9887
-    backup: yes
+- name: Copy outputs.conf for splunk 
+  template: src=outputs.conf dest="{{ splunk_home }}/etc/system/local/outputs.conf" mode=650
+  become: yes
+  become_user: "{{ splunk_user }}"
+  notify:
+    - Restart Splunk
+
+- name: Copy limits.conf for splunk 
+  copy: src=limits.conf dest="{{ splunk_home }}/etc/system/local/limits.conf" mode=650
   become: yes
   become_user: "{{ splunk_user }}"
   notify:
@@ -86,4 +141,3 @@
 - name: Set init runlevels
   command: "/sbin/chkconfig splunk-{{ splunk_role }} on --level 235"
   become: yes
-
