--- a/projects/splunk/roles/dp/tasks/main.yml
+++ b/projects/splunk/roles/dp/tasks/main.yml
@@ -58,3 +58,10 @@
   command: "/sbin/chkconfig splunk-{{ splunk_role }} on --level 235"
   become: yes
 
+- name: re-read facts after adding custom fact
+  setup: filter=ansible_local
+  become: yes
+
+- include: upgrade-{{splunk_role}}.yml
+  when: ( splunk_version > ansible_local.splunk.dp.version )
+  become: yes
