--- a/projects/splunk/roles/ds/tasks/main.yml
+++ b/projects/splunk/roles/ds/tasks/main.yml
@@ -32,26 +32,61 @@
   notify:
     - Restart Splunk
 
-- name: Copy server.conf for splunk 
-  template: src=server.conf dest="{{ splunk_home }}/etc/system/local/server.conf" mode=650
+- name: Set web.conf configs (settings.startwebserver)
+  ini_file:
+    path: "{{ splunk_home }}/etc/system/local/web.conf" 
+    section: settings
+    option: startwebserver
+    value: "{{splunk_web_enabled}}"
+    backup: yes
   become: yes
   become_user: "{{ splunk_user }}"
   notify:
     - Restart Splunk
 
-- name: Copy web.conf for splunk 
-  template: src=web.conf dest="{{ splunk_home }}/etc/system/local/web.conf" mode=650
+- name: Set web.conf configs (settings.mgmtHostPort) 
+  ini_file:
+    path: "{{ splunk_home }}/etc/system/local/web.conf" 
+    section: settings
+    option: mgmtHostPort
+    value: "0:{{splunkd_mgmt_port}}"
+    backup: yes
+  become: yes
+  become_user: "{{ splunk_user }}"
+  notify:
+    - Restart Splunk
+
+- name: Set server.conf configs (general.serverName)
+  ini_file:
+    path: "{{ splunk_home }}/etc/system/local/server.conf" 
+    section: general
+    option: serverName
+    value: "{{ splunk_role }}-{{ inventory_hostname }}"
+    backup: yes
+  become: yes
+  become_user: "{{ splunk_user }}"
+  notify:
+    - Restart Splunk
+
+- name: Set server.conf configs (kvstore.disabled)
+  ini_file:
+    path: "{{ splunk_home }}/etc/system/local/server.conf" 
+    section: kvstore
+    option: disabled
+    value: "{{ splunk_kvstore_disabled }}"
+    backup: yes
   become: yes
   become_user: "{{ splunk_user }}"
   notify:
     - Restart Splunk
 
 - name: Copy init script to init.d
-  template: src=splunk_init dest="/etc/init.d/splunk-{{ splunk_role }}" mode=700
+  template: src=splunk_init dest="/etc/init.d/splunk-{{ splunk_role }}" mode=750
   become: yes
 
 - name: Generate init symlinks
   command: "/sbin/chkconfig splunk-{{ splunk_role }} --add"
+  changed_when: false
   become: yes
 
 - name: Set init runlevels
