--- a/projects/splunk/roles/ds/vars/main.yml
+++ b/projects/splunk/roles/ds/vars/main.yml
@@ -1,18 +1,14 @@
 ---
-# splunk default vars
-splunk_role: cm
+# splunk ds vars
+splunk_version: 6.6.0
+splunk_role: ds
 splunk_web_enabled: 0
 splunk_kvstore_disabled: 1
-splunk_home: /opt/splunk/cm
+splunk_home: /opt/splunk/ds
 splunk_root: /opt/splunk
-splunkd_mgmt_port: 18089
+splunkd_mgmt_port: 8089
 splunk_git_repo: 'ssh://jslay@127.0.0.1:2222/Users/jslay/Projects/splunk/enterprise/linux/splunk'
 splunk_admin_pass: '@thL0n64'
 splunk_user: splunk
 splunk_group: splunk
-splunk_cluster_key: jksclusterkey
-splunk_cluster_label: jkscluster
-splunk_sf: 2
-splunk_rf: 2
-splunk_cluster_mode: master
 splunk_lm_uri: https://172.31.17.154:8089
