--- a/projects/splunk/roles/uf/tasks/install.yml
+++ b/projects/splunk/roles/uf/tasks/install.yml
@@ -21,7 +21,7 @@
   become: yes
 
 - name: Checkout Latest Splunk Forwarder from Git
-  git: repo={{ splunk_git_repo }} dest={{ splunk_home }} accept_hostkey=yes force=yes
+  git: repo={{ splunk_git_repo }} dest={{ splunk_home }} ssh_opts="-o StrictHostKeyChecking=no" force=yes
   become: yes
 
 - name: Chmod and Chown shit.
