--- a/projects/splunk/roles/uf/tasks/main.yml
+++ b/projects/splunk/roles/uf/tasks/main.yml
@@ -18,10 +18,6 @@
 - include: install.yml
   when: ( st.stat.isdir is not defined or ftr.stat.islnk is defined )
 
-- name: Ensure Splunk is started
-  service: name="splunk-{{ splunk_role }}" state=started enabled=yes
-  become: yes
-
 - name: Ensure SPLUNK_OS_USER is set
   lineinfile: dest="{{ splunk_home }}/etc/splunk-launch.conf" 
               state=present 
@@ -33,7 +29,7 @@
   notify:
     - Restart Splunk
 
-- name: Set web.conf configs
+- name: Set web.conf configs (settings.mgmtHostPort)
   ini_file:
     path: "{{ splunk_home }}/etc/system/local/web.conf" 
     mode: 0650
@@ -46,7 +42,7 @@
   notify:
     - Restart Splunk
 
-- name: Set server.conf configs
+- name: Set server.conf configs (general.serverName)
   ini_file:
     path: "{{ splunk_home }}/etc/system/local/server.conf" 
     mode: 0650
@@ -59,7 +55,7 @@
   notify:
     - Restart Splunk
 
-- name: Set Deployment Client Configs (1)
+- name: Set Deployment Client Configs (deployment-client.clientName)
   ini_file: 
     path: "{{ splunk_home }}/etc/system/local/deploymentclient.conf"
     section: deployment-client
@@ -72,7 +68,7 @@
   notify:
     - Restart Splunk
 
-- name: Set Deployment Client Configs (2)
+- name: Set Deployment Client Configs (target-broker:deploymentServer.targetUri)
   ini_file: 
     path: "{{ splunk_home }}/etc/system/local/deploymentclient.conf"
     section: "target-broker:deploymentServer"
@@ -85,5 +81,16 @@
   notify:
     - Restart Splunk
 
+- name: Ensure Splunk is started
+  service: name="splunk-{{ splunk_role }}" state=started enabled=yes
+  become: yes
+
+- name: re-read facts after adding custom fact
+  setup: filter=ansible_local
+  become: yes
+
+- include: upgrade-{{splunk_role}}.yml
+  when: ( splunk_version > ansible_local.splunk.uf.version )
+  
 
 
