--- a/projects/splunk/roles/ds/tasks/main.yml
+++ b/projects/splunk/roles/ds/tasks/main.yml
@@ -81,7 +81,7 @@
     - Restart Splunk
 
 - name: Copy init script to init.d
-  template: src=splunk_init dest="/etc/init.d/splunk-{{ splunk_role }}" mode=750
+  template: src=splunk_init dest="/etc/init.d/splunk-{{ splunk_role }}" mode=755
   become: yes
 
 - name: Generate init symlinks
@@ -92,4 +92,10 @@
 - name: Set init runlevels
   command: "/sbin/chkconfig splunk-{{ splunk_role }} on --level 235"
   become: yes
+
+- name: Configure license slave
+  command: "{{ splunk_home }}/bin/splunk edit licenser-localslave -master_uri '{{ splunk_lm_uri }}' -auth admin:{{ splunk_admin_pass }}"
+  become: yes
+  become_user: "{{ splunk_user }}"
+  when: (splunk_lm_uri is defined)
 
