--- a/projects/splunk/roles/cm/tasks/main.yml
+++ b/projects/splunk/roles/cm/tasks/main.yml
@@ -127,6 +127,12 @@
   become: yes
   changed_when: false
 
+- name: Configure license slave
+  command: "{{ splunk_home }}/bin/splunk edit licenser-localslave -master_uri '{{ splunk_lm_uri }}' -auth admin:{{ splunk_admin_pass }}"
+  become: yes
+  become_user: "{{ splunk_user }}"
+  when: (splunk_lm_uri is defined)
+
 - name: re-read facts after adding custom fact
   setup: filter=ansible_local
   become: yes
