--- a/projects/splunk/roles/dp/tasks/main.yml
+++ b/projects/splunk/roles/dp/tasks/main.yml
@@ -47,7 +47,7 @@
     - Restart Splunk
 
 - name: Copy init script to init.d
-  template: src=splunk_init dest="/etc/init.d/splunk-{{ splunk_role }}" mode=700
+  template: src=splunk_init dest="/etc/init.d/splunk-{{ splunk_role }}" mode=755
   become: yes
 
 - name: Generate init symlinks
@@ -58,6 +58,12 @@
   command: "/sbin/chkconfig splunk-{{ splunk_role }} on --level 235"
   become: yes
 
+- name: Configure license slave
+  command: "{{ splunk_home }}/bin/splunk edit licenser-localslave -master_uri '{{ splunk_lm_uri }}' -auth admin:{{ splunk_admin_pass }}"
+  become: yes
+  become_user: "{{ splunk_user }}"
+  when: (splunk_lm_uri is defined)
+
 - name: re-read facts after adding custom fact
   setup: filter=ansible_local
   become: yes
@@ -65,3 +71,4 @@
 - include: upgrade-{{splunk_role}}.yml
   when: ( splunk_version > ansible_local.splunk.dp.version )
   become: yes
+
