--- a/projects/splunk/roles/ds/vars/main.yml
+++ b/projects/splunk/roles/ds/vars/main.yml
@@ -11,4 +11,4 @@ splunk_git_repo: 'ssh://jslay@127.0.0.1:2222/Users/jslay/Projects/splunk/enterpr
 splunk_admin_pass: '@thL0n64'
 splunk_user: splunk
 splunk_group: splunk
-splunk_lm_uri: https://172.31.17.154:8089
+splunk_lm_uri: https://ip-172-31-33-197.ec2.internal:8089
