--- a/projects/splunk/roles/idx/tasks/main.yml
+++ b/projects/splunk/roles/idx/tasks/main.yml
@@ -66,6 +66,7 @@
   become: yes
   become_user: "{{ splunk_user }}"
   when: (splunk_lm_uri is defined)
+  changed_when: false
 
 - name: re-read facts after adding custom fact
   setup: filter=ansible_local
