About to remove conditional playbook includes and add plays to the main.yml file to help with idempotence.  Conditional includes from vars make it hard to revert (unset) properties in conf files

--- a/projects/splunk/roles/cm/tasks/main.yml
+++ b/projects/splunk/roles/cm/tasks/main.yml
@@ -168,5 +168,5 @@
   when: ( splunk_version > ansible_local.splunk.cm.version )
 
 - include: multisite.yml
-  when: ( splunk_cluster_multisite is true )
+  when: ( splunk_cluster_multisite == true )
 
