--- a/projects/splunk/roles/idx/tasks/main.yml
+++ b/projects/splunk/roles/idx/tasks/main.yml
@@ -78,3 +78,6 @@
 
 - include: clustering.yml
   when: ( splunk_cluster_member == true )
+
+- include: multisite.yml
+  when: ( splunk_cluster_multisite == true )
