--- a/projects/splunk/roles/ds/tasks/main.yml
+++ b/projects/splunk/roles/ds/tasks/main.yml
@@ -100,6 +100,10 @@
   when: (splunk_lm_uri is defined)
   changed_when: false
 
+- name: re-read facts after adding custom fact
+  setup: filter=ansible_local
+  become: yes
+
 - include: upgrade.yml
   when: ( splunk_version > ansible_local.splunk.idx.version )
   become: yes
