Probably going to roll back to a previous commit with a new branch...will merge back if things work out

--- a/projects/splunk/roles/idx/tasks/main.yml
+++ b/projects/splunk/roles/idx/tasks/main.yml
@@ -147,6 +147,7 @@
     backup: yes
   become: yes
   become_user: "{{ splunk_user }}"
+  when: "{{ splunk_multisite |default(false) }} == true"
   notify:
     - Restart Splunk
 
