--- a/projects/splunk/roles/enterprise/defaults/main.yml
+++ b/projects/splunk/roles/enterprise/defaults/main.yml
@@ -1,6 +1,8 @@
 ---
-# splunk default vars
+# splunk default vars for the enterprise role.  some of these should be overriden by either role params at dependency time or group vars
 splunk_root: /opt/splunk
 splunk_git_repo: 'ssh://jslay@127.0.0.1:2222/Users/jslay/Projects/splunk/enterprise/linux/splunk'
-splunk_web_enabled: 1
-splunk_kvstore_disabled: 1
+splunk_user: splunk
+splunk_group: splunk
+splunk_home: /opt/splunk
+
