--- a/projects/splunk/roles/cm/defaults/main.yml
+++ b/projects/splunk/roles/cm/defaults/main.yml
@@ -13,4 +13,5 @@ splunk_sf: 2
 splunk_rf: 2
 splunk_cluster_mode: master
 splunk_lm_uri: https://ip-172-31-33-197.ec2.internal:8089
-
+splunk_idx_clustering: true
+splunk_idx_clustering_multisite: false
