--- a/projects/splunk/roles/ds/meta/main.yml
+++ b/projects/splunk/roles/ds/meta/main.yml
@@ -1,8 +1,4 @@
 ---
 dependencies:
-  - { role: enterprise, 
-      splunk_home: /opt/splunk/ds,
-      splunk_web_enabled: 0,
-      splunk_kvstore_disabled: 1,
-      splunk_role: ds
-     }
+  -  role: enterprise
+     
