Implemented single site clustering with dynamic includes.  Currently there is no way to revert to non-clustered installs from a clustered one.

--- a/projects/splunk/roles/cm/tasks/main.yml
+++ b/projects/splunk/roles/cm/tasks/main.yml
@@ -125,3 +125,6 @@
 
 - include: upgrade.yml
   when: ( splunk_version > ansible_local.splunk.cm.version )
+
+- include: multisite.yml
+  when: ( splunk_cluster_multisite == true )
