--- a/projects/splunk/roles/sh/defaults/main.yml
+++ b/projects/splunk/roles/sh/defaults/main.yml
@@ -11,3 +11,4 @@ splunk_lm_uri: https://172.31.17.154:8089
 splunk_sh_clustering: false
 splunk_idx_clustering: false
 splunk_idx_clustering_multisite: false
+splunk_admin_pass: '@thL0n64'
