--- a/projects/splunk/roles/sh/tasks/main.yml
+++ b/projects/splunk/roles/sh/tasks/main.yml
@@ -68,3 +68,18 @@
 - include: upgrade.yml
   when: ( splunk_version > ansible_local.splunk.sh.version )
   become: yes
+
+- name: Add search peers
+  command: "{{ splunk_home }}/bin/splunk add search-server https://{{ hostvars[item].ec2_private_dns_name }}:8089 -auth admin:{{ splunk_admin_pass }} -remoteUsername admin -remotePassword {{ splunk_admin_pass }}"
+  with_items:
+    - "{{ groups['indexers'] }}"
+    - "{{ groups['deployment_servers'] }}"
+  become: yes
+  become_user: "{{ splunk_user }}"
+  ignore_errors: true
+  when: ( splunk_idx_clustering != true )
+
+- include: idx_clustering.yml
+  when: ( splunk_idx_clustering == true )
+  become: yes
+
