--- a/projects/splunk/roles/sh/tasks/idx_clustering.yml
+++ b/projects/splunk/roles/sh/tasks/idx_clustering.yml
@@ -6,7 +6,7 @@
   become: yes
   become_user: "{{ splunk_user }}"
   ignore_errors: true
-  when: ( splunk_idx_clustering = true )
+  when: ( splunk_idx_clustering == true )
 
 - name: Set server.conf configs (clustering.pass4SymmKey)
   ini_file:
