--- a/projects/splunk/roles/sh/tasks/main.yml
+++ b/projects/splunk/roles/sh/tasks/main.yml
@@ -83,3 +83,8 @@
   when: ( splunk_idx_clustering == true )
   become: yes
 
+- include: multisite.yml
+  when: ( splunk_idx_clustering_multisite == true )
+  become: yes
+
+
