--- a/projects/splunk/roles/cm/defaults/main.yml
+++ b/projects/splunk/roles/cm/defaults/main.yml
@@ -7,12 +7,12 @@ splunk_kvstore_disabled: 1
 splunk_home: /opt/splunk/cm
 splunk_root: /opt/splunk
 splunkd_mgmt_port: 18089
-splunk_cluster_key: jksclusterkey
-splunk_cluster_label: jkscluster
-splunk_sf: 2
-splunk_rf: 2
-splunk_cluster_mode: master
+splunk_idx_clustering_key: myclusterpassword
+splunk_idx_clustering_label: mycluster 
+splunk_idx_clustering_replication_factor: 2
+splunk_idx_clustering_search_factor: 2
+splunk_idx_clustering_mode: master
 splunk_lm_uri: https://ip-172-31-33-197.ec2.internal:8089
 splunk_idx_clustering: true
 splunk_idx_clustering_multisite: false
-splunk_admin_pass: '@thL0n64'
+splunk_admin_pass: myadminpass
