--- a/projects/splunk/roles/ds/defaults/main.yml
+++ b/projects/splunk/roles/ds/defaults/main.yml
@@ -8,7 +8,7 @@ splunk_home: /opt/splunk/ds
 splunk_root: /opt/splunk
 splunkd_mgmt_port: 8089
 splunk_git_repo: 'ssh://jslay@127.0.0.1:2222/Users/jslay/Projects/splunk/enterprise/linux/splunk'
-splunk_admin_pass: '@thL0n64'
+splunk_admin_pass: myadminpass
 splunk_user: splunk
 splunk_group: splunk
-splunk_lm_uri: https://ip-172-31-33-197.ec2.internal:8089
+splunk_lm_uri: https://mylmURL:8089
