--- a/projects/splunk/roles/enterprise/defaults/main.yml
+++ b/projects/splunk/roles/enterprise/defaults/main.yml
@@ -1,9 +1,10 @@
 ---
 # splunk default vars
+# Use group_vars to override
 splunk_root: /opt/splunk
-splunk_git_repo: 'ssh://jslay@127.0.0.1:2222/Users/jslay/Projects/splunk/enterprise/linux/splunk'
+splunk_git_repo: 'ssh://myuser@mygitbox.mydomain.com'
 splunk_home: /opt/splunk/default
 splunk_user: splunk
 splunk_group: splunk
 splunk_role: default
-
+splunk_admin_pass: myadminpass
