--- a/projects/splunk/roles/idx/defaults/main.yml
+++ b/projects/splunk/roles/idx/defaults/main.yml
@@ -1,5 +1,6 @@
 ---
 # splunk idx vars
+# You should control/override these with group_vars
 splunk_version: 6.6.0
 splunk_role: idx
 splunk_web_enabled: 0
@@ -7,10 +8,13 @@ splunk_kvstore_disabled: 1
 splunk_home: /opt/splunk/idx
 splunk_root: /opt/splunk
 splunkd_mgmt_port: 8089
-splunk_git_repo: 'ssh://jslay@127.0.0.1:2222/Users/jslay/Projects/splunk/enterprise/linux/splunk'
-splunk_admin_pass: '@thL0n64'
+splunk_git_repo: 'ssh://myuser@mygitbox.mydomain.com'
+splunk_admin_pass: 'myadminpass'
 splunk_user: splunk
 splunk_group: splunk
-splunk_lm_uri: https://ip-172-31-33-197.ec2.internal:8089
+
+# Should have this be dynamic from an LM role or hostvar or something
+splunk_lm_uri: https://your_lm_url:8089
+
 splunk_idx_clustering: false
 splunk_idx_clustering_multisite: false
