--- a/projects/splunk/roles/sh/tasks/multisite.yml
+++ b/projects/splunk/roles/sh/tasks/multisite.yml
@@ -1,1 +1,25 @@
 ---
+- name: Set server.conf configs (general.site)
+  ini_file:
+    path: "{{ splunk_home }}/etc/system/local/server.conf" 
+    section: general
+    option: site
+    value: "{{ splunk_idx_clustering_site }}"
+    backup: yes
+  become: yes
+  become_user: "{{ splunk_user }}"
+  notify:
+    - Restart Splunk
+
+- name: Set server.conf configs (clustering.multisite)
+  ini_file:
+    path: "{{ splunk_home }}/etc/system/local/server.conf" 
+    section: clustering
+    option: multisite
+    value: "{{ splunk_idx_clustering_multisite }}"
+    backup: yes
+  become: yes
+  become_user: "{{ splunk_user }}"
+  notify:
+    - Restart Splunk
+
