Completed vault conversion and removed keys from code..as well as bogus lab passwords and shit

--- a/projects/splunk/roles/common/defaults/main.yml
+++ b/projects/splunk/roles/common/defaults/main.yml
@@ -3,6 +3,7 @@
 # Use Group vars to override
 
 pubkey: "Apublicsshkey"
+privkey: "Aprivkey..."
 splunk_uid: "77777"
 splunk_gid: "77777"
 splunk_user: "splunk"
