--- a/projects/splunk/roles/common/tasks/main.yml
+++ b/projects/splunk/roles/common/tasks/main.yml
@@ -12,18 +12,20 @@
   become: yes
   
 - name: Update root pub/auth keys 
-  lineinfile: dest=~/.ssh/authorized_keys line="{{ pubkey }}" state=present create=yes mode=0400
+  authorized_key:
+    user: root
+    key: "{{ pubkey }}" 
+    state: present 
+  no_log: true
   become: yes
 
 - name: Update root priv key
-  copy: src=id_rsa backup=yes mode=0400 dest=~/.ssh/id_rsa
+  copy: 
+    backup: yes 
+    dest: ~/.ssh/id_rsa
+    content: "{{ privkey }}"
+  no_log: true
   become: yes
-
-- name: Update pub/auth keys 
-  lineinfile: dest=~/.ssh/authorized_keys line="{{ pubkey }}" state=present create=yes mode=0400
-
-- name: Update priv key
-  copy: src=id_rsa backup=yes mode=0400 dest=~/.ssh/id_rsa
 
 - name: Create splunk group
   group: name="{{ splunk_group }}" gid="{{ splunk_gid }}" state=present
@@ -44,12 +46,21 @@
   become: yes
 
 - name: Update splunk user pub/auth keys 
-  lineinfile: dest="{{ splunk_root }}/.ssh/authorized_keys" line="{{ pubkey }}" state=present create=yes mode=0400
+  authorized_key:
+    user: "{{ splunk_user }}"
+    key: "{{ pubkey }}" 
+    state: present 
   become: yes
 
 - name: Update splunk user priv key
-  copy: src=id_rsa backup=yes mode=0400 dest="{{ splunk_root }}/.ssh/id_rsa" owner="{{ splunk_user }}" group="{{ splunk_group }}"
+  copy: 
+    backup: yes 
+    dest: ~/.ssh/id_rsa
+    content: "{{ privkey }}"
+  no_log: true
   become: yes
+  become_user: "{{ splunk_user }}"
+
 
 - name: Create directory for ansible custom facts
   file: state=directory recurse=yes path=/etc/ansible/facts.d 
