--- a/projects/splunk/roles/idx/tasks/idx_clustering.yml
+++ b/projects/splunk/roles/idx/tasks/idx_clustering.yml
@@ -1,3 +1,9 @@
+- name: Check for existing pass4SymmKey and don't set it again.
+  command: "cat {{ splunk_home }}/etc/system/local/server.conf"
+  register: keyCheck
+  become: true
+  become_user: "{{ splunk_user }}"
+
 - name: Set server.conf configs (clustering.pass4SymmKey)
   ini_file:
     path: "{{ splunk_home }}/etc/system/local/server.conf"
@@ -7,6 +13,7 @@
     backup: yes
   become: yes
   become_user: "{{ splunk_user }}"
+  when: keyCheck.stdout.find('pass4SymmKey') == -1
   notify:
     - Restart Splunk
 
