--- a/projects/splunk/roles/cm/tasks/main.yml
+++ b/projects/splunk/roles/cm/tasks/main.yml
@@ -67,6 +67,12 @@
   notify:
     - Restart Splunk
 
+- name: Check for existing pass4SymmKey and don't set it again.
+  command: "cat {{ splunk_home }}/etc/system/local/server.conf"
+  register: keyCheck
+  become: true
+  become_user: "{{ splunk_user }}"
+
 - name: Set server.conf configs (clustering.pass4SymmKey)
   ini_file:
     path: "{{ splunk_home }}/etc/system/local/server.conf" 
@@ -77,6 +83,7 @@
     backup: yes
   become: yes
   become_user: "{{ splunk_user }}"
+  when: keyCheck.stdout.find('pass4SymmKey') == -1
   notify:
     - Restart Splunk
 
