--- a/projects/splunk/roles/sh/tasks/idx_clustering.yml
+++ b/projects/splunk/roles/sh/tasks/idx_clustering.yml
@@ -1,3 +1,9 @@
+- name: Check for existing pass4SymmKey and don't set it again.
+  command: "cat {{ splunk_home }}/etc/system/local/server.conf"
+  register: keyCheck
+  become: true
+  become_user: "{{ splunk_user }}"
+
 - name: Add search peers (cluster master & DS)
   command: "{{ splunk_home }}/bin/splunk add search-server https://{{ hostvars[item].ec2_private_dns_name }}:8089 -auth admin:{{ splunk_admin_pass }} -remoteUsername admin -remotePassword {{ splunk_admin_pass }}"
   with_items:
@@ -17,6 +23,7 @@
     backup: yes
   become: yes
   become_user: "{{ splunk_user }}"
+  when: keyCheck.stdout.find('pass4SymmKey') == -1
   notify:
     - Restart Splunk
 
