--- a/projects/splunk/roles/idx/tasks/main.yml
+++ b/projects/splunk/roles/idx/tasks/main.yml
@@ -76,6 +76,7 @@
   become_user: "{{ splunk_user }}"
   when: (splunk_lm_uri is defined)
   ignore_errors: true
+  changed_when: false
 
 - name: re-read facts after adding custom fact
   setup: filter=ansible_local
