--- a/projects/splunk/roles/idx/tasks/idx_clustering.yml
+++ b/projects/splunk/roles/idx/tasks/idx_clustering.yml
@@ -3,6 +3,7 @@
   register: keyCheck
   become: true
   become_user: "{{ splunk_user }}"
+  changed_when: false
 
 - name: Set server.conf configs (clustering.pass4SymmKey)
   ini_file:
