--- a/projects/splunk/roles/idx/tasks/idx_clustering.yml
+++ b/projects/splunk/roles/idx/tasks/idx_clustering.yml
@@ -15,6 +15,7 @@
   become: yes
   become_user: "{{ splunk_user }}"
   when: keyCheck.stdout.find('pass4SymmKey') == -1
+  no_log: true
   notify:
     - Restart Splunk
 
