--- a/projects/splunk/roles/enterprise/tasks/install.yml
+++ b/projects/splunk/roles/enterprise/tasks/install.yml
@@ -33,4 +33,5 @@
   command: "{{ splunk_home }}/bin/splunk edit user admin -password {{ splunk_admin_pass }} -auth admin:changeme"
   become: yes
   become_user: "{{ splunk_user }}"
+  no_log: true
 
