--- a/projects/splunk/roles/idx/tasks/main.yml
+++ b/projects/splunk/roles/idx/tasks/main.yml
@@ -77,6 +77,7 @@
   when: (splunk_lm_uri is defined)
   ignore_errors: true
   changed_when: false
+  no_log: true
 
 - name: re-read facts after adding custom fact
   setup: filter=ansible_local
