--- a/projects/splunk/roles/ds/tasks/main.yml
+++ b/projects/splunk/roles/ds/tasks/main.yml
@@ -90,3 +90,12 @@
   become: yes
   become_user: "{{ splunk_user }}"
   when: (splunk_lm_uri is defined)
+
+- name: re-read facts after adding custom fact
+  setup: filter=ansible_local
+  become: yes
+
+- include: upgrade.yml
+  when: ( splunk_version > ansible_local.splunk.ds.version )
+  become: yes
+
