--- a/projects/splunk/roles/ds/tasks/main.yml
+++ b/projects/splunk/roles/ds/tasks/main.yml
@@ -95,7 +95,7 @@
   setup: filter=ansible_local
   become: yes
 
-- include: upgrade.yml
+- include_tasks: upgrade.yml
   when: ( splunk_version > ansible_local.splunk.ds.version )
   become: yes
 
